<resources>
    <string name="app_name">Class Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="facebook_app_id">282362665443945</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_with_facebook">Facebook</string>
    <string name="login_with_google">Google</string>
    <string name="login_using_your_social_account">Login Using Your Social Account</string>
    <string name="cab_requested">Your cab has been requested for %1$s.</string>
    <string name="pickup">Pickup</string>
    <string name="return_label">Return</string>
    <string name="request_change">Request Change</string>
    <string name="sample_time">12:59 AM</string>
    <string name="change">Change</string>
    <string name="cab_request">Cab Request</string>
    <string name="sample">Sample</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="submit">Submit</string>
    <string name="pending">Cab Not Yet Requested</string>
    <string name="session">Session</string>
    <string name="cab">Cab</string>
    <string name="action_settings">Settings</string>
</resources>
