<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.Toolbar
        android:id="@+id/admin_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_header"
            android:background="@color/status_green"
            android:orientation="vertical"
            android:padding="@dimen/card_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/control_vertical_margin_small"
                android:text="Request Status"
                android:textColor="@color/lightGray" />

            <TextView
                android:id="@+id/request_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/cardview_header_text"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/card_padding"
            android:paddingLeft="@dimen/card_padding"
            android:paddingRight="@dimen/card_padding"
            android:paddingTop="@dimen/card_header">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:text="@string/session" />


                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="30"
                    android:text="@string/cab"
                    android:textStyle="bold"
                    android:textAlignment="viewEnd"
                    tools:targetApi="jelly_bean_mr1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:text="@string/pickup" />

                <TextView
                    android:id="@+id/pickup_time"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:text="@string/sample_time" />


                <TextView
                    android:id="@+id/change_pickup_time"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="30"
                    android:text="@string/sample_time"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:textAlignment="viewEnd"
                    tools:targetApi="jelly_bean_mr1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:text="@string/return_label" />

                <TextView
                    android:id="@+id/return_time"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:text="@string/sample_time" />

                <TextView
                    android:id="@+id/change_return_time"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:layout_gravity="end"
                    android:layout_weight="30"
                    android:text="@string/sample_time"
                    tools:targetApi="jelly_bean_mr1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGray" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/submit_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/submit" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
