<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_user_default"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/faculty_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/heading3"
                    android:textStyle="bold"
                    android:text="John Doe"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/control_vertical_margin_small"
                    />

                <TextView
                    android:id="@+id/contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9876543210"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/control_vertical_margin_small"
                    />
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/control_vertical_margin_small"
            android:textStyle="bold"
            android:text="Session"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/control_vertical_margin_small">

            <TextView
                android:textSize="@dimen/sub_section_font"
                android:id="@+id/session_start_label"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content"
                android:text="Start" />

            <TextView
                android:textSize="@dimen/sub_section_font"
                android:id="@+id/session_start"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content"
                android:text="@string/sample_time" />

            <TextView
                android:textSize="@dimen/sub_section_font"
                android:id="@+id/session_end_label"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content"
                android:text="End" />

            <TextView
                android:width="75dp"
                android:textSize="@dimen/sub_section_font"
                android:id="@+id/session_end"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content"
                android:text="@string/sample_time" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/control_vertical_margin_small"
            android:textStyle="bold"
            android:text="Cab Timings"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/control_vertical_margin_small">

            <TextView
                android:textSize="@dimen/sub_section_font"
                android:id="@+id/cab_pickup_label"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content"
                android:text="@string/pickup" />

            <TextView
                android:textSize="@dimen/sub_section_font"
                android:id="@+id/cab_pickup"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content"
                android:text="@string/sample_time" />

            <TextView
                android:textSize="@dimen/sub_section_font"
                android:id="@+id/cab_drop_label"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content"
                android:text="@string/return_label" />

            <TextView
                android:textSize="@dimen/sub_section_font"
                android:id="@+id/cab_drop"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content"
                android:text="@string/sample_time" />
        </LinearLayout>
</LinearLayout>